--- a/index3.css
+++ b/index3.css
@@ -6,28 +6,34 @@
     width: 100vw;
     height: 909px;
 
+    justify-content: space-between;
+
 }
 
 
 .Design-page{
-    padding: 160px 165px;
+    padding-top: 160px;
+    padding-left: 165px;
+    padding-right: auto;
 }
 
 .img{
-    padding: 100px 165px;
+    padding-top: 100px;
+    padding-right: 165px;
+    padding-left: Auto;
 
 }
 
 .content-two{
-    margin: auto;
     display: flex;
     flex-direction: column;
     gap: 30px;
 
-    justify-content: space-between;
+    
 
-    padding: 70px 165px;
-
+    padding-top: 70px;
+    padding-left: 165px;
+    padding-right: Auto;
 }
 
 .top-section-two{
@@ -42,7 +48,7 @@
     gap: 30px;
 }
 
-.section-two .title-B{
+.title-B{
     color: #091133;
     font-family: Roboto;
     font-size: 36px;
@@ -51,7 +57,7 @@
     line-height: 48px;
 }
 
-.Design-page.p{
+.lorem{
     color: #6F7CB2;
     font-family: Roboto;
     font-size: 16px;
@@ -61,20 +67,12 @@
    
 }
 
-.section-B .title{
+.title{
     color: #091133;
     font-family: Roboto;
     font-size: 18px;
     font-weight: 500;
     line-height: 30px;
     margin: 0px;
-    margin-bottom: 8px;
-}
-
-.section-B.p{
-    color: #5D6970;
-    font-family: Roboto;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
+    margin-bottom:8px;
 }
