--- a/prt B.css
+++ b/prt B.css
@@ -2,9 +2,6 @@
     display: flex;
     flex-direction: column;
 
-    align-items: center;
-    justify-content: center;
-
     padding-left: 161px;
     padding-right: 169px;
 }
@@ -13,9 +10,7 @@
     display: flex;
     flex-direction: row;
 
-    justify-content: center;
-
-    gap: 80px; 
+    justify-content: space-between;
 }
 
 
@@ -23,9 +18,7 @@
     display: flex;
     flex-direction: row; 
 
-    justify-content: center;
-
-    gap: 80px;
+    justify-content: space-between;
 }
 
 
@@ -34,9 +27,7 @@
     display: flex;
     flex-direction: row;
 
-    justify-content: center;
-
-    gap: 150px;
+    justify-content: space-between;
 }
 
 
