--- a/prt B3.css
+++ b/prt B3.css
@@ -1,18 +1,23 @@
 .footer{
     background-color: #E7ECFF;
     height: fit-content;
+    width: 100vw;
   
-    padding-left: 165px;
-    padding-right: 165px;
+    
     
     margin: 0px;
 }
 
+.class{
+    padding-inline: 165px;
+}
 .copy{
     display: flex;
     flex-direction: row;
 
     justify-content: space-between;
+
+    padding-inline: 165px;
 
    
 }
@@ -21,7 +26,10 @@
     display: flex;
     flex-direction: row;
 
-    justify-content: space-between;  
+    justify-content: space-between;
+
+    margin: 0px;
+    padding: 0px;
 }
 
 #copy{
@@ -74,15 +82,14 @@
     display: flex;
     gap: 60px;
 
-    padding-bottom: 46px;
-
-    margin-top: 20px;
     color: var(--colour-main-blue-300,#929ECC);
     font-family: Roboto;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
+   
+    margin-top: 20px;
 }
 
 .icon{
@@ -90,12 +97,4 @@
     gap: 30px;
 
     margin-top: 20px;
-
-    padding-bottom: 46px;
-}
-
-hr{
-    margin-bottom: 76px;
-    color: #cdd1d4;
-    text-decoration-thickness: 1px;
 }
